fix alignment for style colors

--- a/src/app/modules/map/components/map-style/map-style.component.css
+++ b/src/app/modules/map/components/map-style/map-style.component.css
@@ -94,6 +94,7 @@
 .colours {
   margin: 0 5px;
   float: left;
+  display: flex;
   width: 200px;
 }
 .colours-ul {
@@ -162,6 +163,8 @@
 
 .dropdown-container {
   position: relative;
+  flex: 1;
+  margin-top: auto;
 }
 .dropdown-container .caret {
   position: absolute;
